[gd_scene load_steps=5 format=3 uid="uid://b1qbonwq4n2ni"]

[ext_resource type="Texture2D" uid="uid://3xxxvlmccmec" path="res://Arts/Objects/Boulder.png" id="1_sju0o"]
[ext_resource type="Script" uid="uid://dsrahf4smetn5" path="res://Objects/Boulder/boulder.gd" id="1_t5gur"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5gur"]
size = Vector2(32, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_sju0o"]
radius = 96.0

[node name="Boulder" type="Node2D"]
script = ExtResource("1_t5gur")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4.76837e-07)
texture = ExtResource("1_sju0o")

[node name="Hitbox" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_t5gur")

[node name="MouseCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseCollider"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_t5gur")

[node name="InteractRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
shape = SubResource("CircleShape2D_sju0o")

[connection signal="mouse_entered" from="Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_hitbox_mouse_exited"]
[connection signal="mouse_entered" from="MouseCollider" to="." method="_on_mouse_collider_mouse_entered"]
[connection signal="mouse_exited" from="MouseCollider" to="." method="_on_mouse_collider_mouse_exited"]
[connection signal="body_entered" from="InteractRange" to="." method="_on_interact_range_body_entered"]
[connection signal="body_exited" from="InteractRange" to="." method="_on_interact_range_body_exited"]
